--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1080,10 +1080,10 @@ ObjectMixerEditor.TimeStamp=2024.09.30-13.11.05
 ObjectMixerEditor.LastCompileMethod=Unknown
 XInputDevice.TimeStamp=2024.09.30-13.12.53
 XInputDevice.LastCompileMethod=Unknown
-Bridge.TimeStamp=2024.09.30-13.18.39
-Bridge.LastCompileMethod=Unknown
-MegascansPlugin.TimeStamp=2024.09.30-13.18.40
-MegascansPlugin.LastCompileMethod=Unknown
+Bridge.TimeStamp=2024.11.06-18.57.04
+Bridge.LastCompileMethod=External
+MegascansPlugin.TimeStamp=2024.11.06-18.57.05
+MegascansPlugin.LastCompileMethod=External
 CmdLinkServer.TimeStamp=2024.09.30-13.11.02
 CmdLinkServer.LastCompileMethod=Unknown
 AudioSynesthesiaEditor.TimeStamp=2024.09.30-13.12.21
@@ -1432,6 +1432,16 @@ ConcertTakeRecorder.TimeStamp=2024.09.30-13.12.57
 ConcertTakeRecorder.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2024.09.30-13.09.18
 ExternalImagePicker.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2024.09.30-13.09.21
+TextureEditor.LastCompileMethod=Unknown
+Voice.TimeStamp=2024.09.30-13.09.22
+Voice.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2024.09.30-13.09.19
+MovieSceneCapture.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2024.09.30-13.09.21
+SequencerWidgets.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2024.09.30-13.09.18
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
