--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/BaseLevel.BaseLevel
-EditorStartupMap=/Game/BaseLevel.BaseLevel
+GameDefaultMap=/Game/MainMenu.MainMenu
+EditorStartupMap=/Game/MainMenu.MainMenu
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
